# cocos2d-x-3rd-party-libs-bin

./: CMakeLists.txt
.github/workflows/: manual_release.yml
Box2D/: CMakeLists.txt
Box2D/prebuilt/win64/release/: libbox2d.lib
bullet/: CMakeLists.txt
chipmunk/prebuilt/win64/debug-lib/: libchipmunk.lib
cmake/: CocosExternalConfig.cmake
freetype2/prebuilt/win64/: freetype.lib
glad/: CMakeLists.txt  glad.c  glad.h
glfw3/prebuilt/win32/: glfw3.lib
glfw3/prebuilt/win64/: glfw3.lib
jpeg/prebuilt/win64/: libjpeg.lib
openssl/: CMakeLists.txt
openssl/prebuilt/win64/: crypto-45.lib
png/prebuilt/win64/: libpng.lib
uv/: CMakeLists.txt
uv/prebuilt/win64/: libuv.lib
webp/prebuilt/win64/: libwebp.lib
websockets/prebuilt/win64/: websockets.lib
win64-specific/MP3Decoder/prebuilt/: libmpg123.lib
win64-specific/OggDecoder/prebuilt/: libogg.lib
win64-specific/icon/: CMakeLists.txt
win64-specific/icon/prebuilt/: libcharset.lib  libiconv.lib
zlib/: CMakeLists.txt
